[package]
name = "docker-metrics-exporter"
version = "0.1.0"
authors = ["Wojciech Wilk <galhadpl@gmail.com>"]
edition = "2018"
readme = "README.md"
homepage = "https://github.com/Galhad/docker-metrics-exporter"
repository = "https://github.com/Galhad/docker-metrics-exporter"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.0"
env_logger = "0.7.1"
dotenv = "0.15.0"
actix-web = "2.0.0"
actix-rt = "1.0.0"
config = "0.10.1"
serde = "^1.0"
futures = "0.3"
